ui_tests/tests/should-fail/2_2-top-mod-bad-name.rs
fn main() {}

#[mod_template::define(define_foo)]
mod bad_name {}
